src/example_tbs/dma_axi/dma_axi32_core0_axim_timeout/compile_result.txt
file: dma_axi32_core0_axim_timeout.v
module: dma_axi32_core0_axim_timeout
status: FAIL
slang_output:

Build failed: 4 errors, 0 warnings
import/dma_axi/src/dma_axi32/dma_axi32_core0_axim_timeout.v:46:11: error: unknown macro or compiler directive '`CMD_BITS'
   input [`CMD_BITS-1:0]      ID;
          ^~~~~~~~~
import/dma_axi/src/dma_axi32/dma_axi32_core0_axim_timeout.v:53:9: error: unknown macro or compiler directive '`TIMEOUT_BITS'
   reg [`TIMEOUT_BITS-1:0]    counter;
        ^~~~~~~~~~~~~
import/dma_axi/src/dma_axi32/dma_axi32_core0_axim_timeout.v:63:23: error: unknown macro or compiler directive '`TIMEOUT_BITS'
       counter <= #1 {`TIMEOUT_BITS{1'b1}};
                      ^~~~~~~~~~~~~
import/dma_axi/src/dma_axi32/dma_axi32_core0_axim_timeout.v:65:23: error: unknown macro or compiler directive '`TIMEOUT_BITS'
       counter <= #1 {`TIMEOUT_BITS{1'b1}};
                      ^~~~~~~~~~~~~

